# reklawdbox

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  LICENSE  README.md  backup.sh  dprint.json  index.html  mcp-config.example.json  mcp.env.example
.github/workflows/: corpus-ci.yml  docs-pages.yml  format.yml
broker/: README.md  package-lock.json  package.json  tsconfig.vitest.json  vitest.config.ts  wrangler.toml
broker/src/: branding.ts  index.ts
broker/tests/: broker.test.ts  setup.ts
docs/: README.md  backup-and-restore.md  conventions.md  discogs-broker-test-first-handover.md  rekordbox-internals.md
docs/bugs/: search-tracks-path-substring.md
docs/developer/: code-quality-audit.md  rekordbox-gotchas.md
docs/integrations/discogs/: auth-plan.md  auth.md
docs/operations/: conventions.md
docs/operations/reports/: 2026-02-20-genre-sop-test.md  2026-02-22-set-builder-harmonic-query-plan.md  2026-03-03-missing-year-resolution.md
docs/operations/runbooks/: backup-and-restore.md
docs/operations/sops/: batch-import.md  collection-audit.md  genre-classification.md  set-builder.md
docs/plans/: 2026-03-01-set-builder-scoring-and-sop-alignment-EXECUTION-NOTES.md  2026-03-01-set-builder-scoring-and-sop-alignment.md
docs/reference/: rekordbox-internals.md
docs/rekordbox/: ORCHESTRATION-PLAN.md  ORCHESTRATOR-PROMPT.md  README.md  SOFTWARE-ORCHESTRATION-HANDOVER.md  SOFTWARE-ORCHESTRATION-PLAN.md  manifest.yaml  rekordbox7-faq.md
docs/rekordbox/faq/: cloud-and-sync.md  (+4 more)
docs/reports/: 2026-02-20-genre-sop-test.md  2026-02-22-set-builder-harmonic-query-plan.md  2026-03-03-missing-year-resolution.md
docs/sops/: batch-import.md  collection-audit.md  set-builder.md
docs/spec/: audit-idempotency.md  audit-implementation-plan.md  db-tag-audit.md  essentia-improvements-handover.md  essentia-v2.md  file-relocation-staging.md  native-tag-tools.md
docs/tmp/: sop-step1-hydration-report.md  sop-step2-taxonomy-report.md  sop-test-session-log.md
scripts/: backup.sh  run-reklawdbox-mcp.sh  run-rekordbox-evals.sh  setup-essentia.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
src/: audio.rs  audit.rs  beatport.rs  changes.rs  cli.rs  color.rs  corpus.rs  db.rs  discogs.rs  eval_routing.rs  eval_tasks.rs  genre.rs  main.rs  normalize.rs  store.rs  tags.rs  tools.rs  types.rs  xml.rs
src/tools/: audio_handlers.rs  audio_scan.rs  audit_handlers.rs  batch.rs  corpus_helpers.rs  discogs_auth.rs  enrich_handlers.rs  enrichment.rs  essentia.rs  eval_scoring.rs  file_tag_handlers.rs  library_handlers.rs  mod.rs  params.rs  resolve.rs  resolve_handlers.rs  scoring.rs  sequencing_handlers.rs  staging_handlers.rs  tests.rs
(+43 files in other folders)
