[package]
name = "crate-dig"
version = "0.1.0"
edition = "2024"
description = "MCP server for Rekordbox library management"
license = "MIT"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io"] }
rusqlite = { version = "0.34", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.9"

[dev-dependencies]
tempfile = "3"
